# fraud-detection-env

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  data_gen.py  fraud_detect_env_environment.py  requirements.txt  tasks.py
tests/: test_env.py
